--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-neuter": "~0.4.0",
+    "grunt-neuter": "~0.6.0",
     "grunt-bower-task": "~0.4.0",
-    "grunt-contrib-uglify": "~0.1.1rc5",
-    "grunt-contrib-coffee": "~0.4.0",
-    "grunt-contrib-jshint": "~0.1.1rc5",
-    "grunt-contrib-qunit": "~0.1.1rc5",
+    "grunt-contrib-uglify": "~0.9.2",
+    "grunt-contrib-coffee": "~0.13.0",
+    "grunt-contrib-jshint": "~0.11.2",
+    "grunt-contrib-qunit": "~0.7.0",
     "grunt-ember-templates": "0.5.0",
-    "grunt-contrib-watch": "~0.2.0rc5",
-    "grunt-contrib-less": "~0.7.0",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-text-replace": "^0.3.12",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-less": "~1.0.1",
+    "grunt-contrib-copy": "~0.8.1",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-text-replace": "^0.4.0",
     "node-static": "*",
-    "grunt-banner": "^0.2.3",
-    "grunt-release-it": "~0.2.0"
+    "grunt-banner": "^0.5.0",
+    "grunt-release-it": "~0.2.1"
   }
 }
