--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
     "qunit": "~1.18.0"
   },
   "devDependencies": {
-    "d3": "~3.5.6"
+    "d3": "~3.5.6",
+    "lodash": "~3.10.1",
+    "moment": "2.10.6"
   }
 }
