--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ember-cli-ic-ajax": "0.2.1",
     "ember-cli-inject-live-reload": "^1.3.1",
     "ember-cli-less": "^1.3.3",
+    "ember-cli-pretender": "0.5.0",
     "ember-cli-qunit": "^1.0.0",
     "ember-cli-release": "0.2.3",
     "ember-cli-sri": "^1.0.3",
@@ -35,15 +36,19 @@
     "ember-disable-prototype-extensions": "^1.0.0",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.3",
-    "ember-try": "0.0.6"
+    "ember-try": "0.0.6",
+    "express": "^4.13.3",
+    "glob": "^4.5.3",
+    "morgan": "^1.6.1"
   },
   "keywords": [
     "ember-addon"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.3",
+    "ember-cli-coffeescript": "1.13.0",
     "ember-cli-htmlbars": "0.7.9",
-    "ember-cli-coffeescript": "1.13.0"    
+    "moment": "^2.10.6"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
